v0.8/_sources/examples/ndbc/latest_request.rst.txt
.. note::
    :class: sphx-glr-download-link-note

    Click :ref:`here <sphx_glr_download_examples_ndbc_latest_request.py>` to download the full example code
.. rst-class:: sphx-glr-example-title

.. _sphx_glr_examples_ndbc_latest_request.py:


NDBC Latest Data Request
========================

This example shows how to use siphon's `simplewebswervice` support query the most recent
observations from all of the NDBC buoys at once.


.. code-block:: python


    import cartopy.crs as ccrs
    import cartopy.feature as cfeature
    import matplotlib.pyplot as plt

    from siphon.simplewebservice.ndbc import NDBC







Get a pandas data frame of all of the observations


.. code-block:: python

    df = NDBC.latest_observations()
    df.head()







In this case I'm going to drop buoys that do not have water temperature measurements.


.. code-block:: python

    df.dropna(subset=['water_temperature'], inplace=True)







Let's make a simple plot of the buoy positions and color by water temperature


.. code-block:: python

    proj = ccrs.LambertConformal(central_latitude=45., central_longitude=-100.,
                                 standard_parallels=[30, 60])

    fig = plt.figure(figsize=(17., 11.))
    ax = plt.axes(projection=proj)
    ax.coastlines('50m', edgecolor='black')
    ax.add_feature(cfeature.OCEAN.with_scale('50m'))
    ax.add_feature(cfeature.LAND.with_scale('50m'))
    ax.set_extent([-85, -75, 25, 30], ccrs.PlateCarree())

    ax.scatter(df['longitude'], df['latitude'], c=df['water_temperature'],
               transform=ccrs.PlateCarree())

    plt.show()



.. image:: /examples/ndbc/images/sphx_glr_latest_request_001.png
    :class: sphx-glr-single-img




**Total running time of the script:** ( 0 minutes  50.271 seconds)


.. _sphx_glr_download_examples_ndbc_latest_request.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download

     :download:`Download Python source code: latest_request.py <latest_request.py>`



  .. container:: sphx-glr-download

     :download:`Download Jupyter notebook: latest_request.ipynb <latest_request.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.readthedocs.io>`_
