v0.10/_sources/examples/ndbc/latest_request.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "examples/ndbc/latest_request.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_examples_ndbc_latest_request.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_examples_ndbc_latest_request.py:


NDBC Latest Data Request
========================

This example shows how to use siphon's `simplewebswervice` support query the most recent
observations from all of the NDBC buoys at once.

.. GENERATED FROM PYTHON SOURCE LINES 11-18

.. code-block:: Python


    import cartopy.crs as ccrs
    import cartopy.feature as cfeature
    import matplotlib.pyplot as plt

    from siphon.simplewebservice.ndbc import NDBC








.. GENERATED FROM PYTHON SOURCE LINES 19-20

Get a pandas data frame of all of the observations

.. GENERATED FROM PYTHON SOURCE LINES 20-23

.. code-block:: Python

    df = NDBC.latest_observations()
    df.head()






.. raw:: html

    <div class="output_subarea output_html rendered_html output_result">
    <div>
    <style scoped>
        .dataframe tbody tr th:only-of-type {
            vertical-align: middle;
        }

        .dataframe tbody tr th {
            vertical-align: top;
        }

        .dataframe thead th {
            text-align: right;
        }
    </style>
    <table border="1" class="dataframe">
      <thead>
        <tr style="text-align: right;">
          <th></th>
          <th>station</th>
          <th>latitude</th>
          <th>longitude</th>
          <th>wind_direction</th>
          <th>wind_speed</th>
          <th>wind_gust</th>
          <th>wave_height</th>
          <th>dominant_wave_period</th>
          <th>average_wave_period</th>
          <th>dominant_wave_direction</th>
          <th>pressure</th>
          <th>3hr_pressure_tendency</th>
          <th>air_temperature</th>
          <th>water_temperature</th>
          <th>dewpoint</th>
          <th>visibility</th>
          <th>water_level_above_mean</th>
          <th>time</th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <th>0</th>
          <td>13001</td>
          <td>12.0</td>
          <td>-23.0</td>
          <td>49.0</td>
          <td>8.9</td>
          <td>11.1</td>
          <td>NaN</td>
          <td>NaN</td>
          <td>NaN</td>
          <td>NaN</td>
          <td>1012.8</td>
          <td>NaN</td>
          <td>23.8</td>
          <td>25.2</td>
          <td>NaN</td>
          <td>NaN</td>
          <td>NaN</td>
          <td>2025-01-24 19:00:00+00:00</td>
        </tr>
        <tr>
          <th>1</th>
          <td>13002</td>
          <td>21.0</td>
          <td>-23.0</td>
          <td>NaN</td>
          <td>NaN</td>
          <td>NaN</td>
          <td>NaN</td>
          <td>NaN</td>
          <td>NaN</td>
          <td>NaN</td>
          <td>NaN</td>
          <td>NaN</td>
          <td>NaN</td>
          <td>22.9</td>
          <td>NaN</td>
          <td>NaN</td>
          <td>NaN</td>
          <td>2025-01-24 19:00:00+00:00</td>
        </tr>
        <tr>
          <th>2</th>
          <td>13008</td>
          <td>15.0</td>
          <td>-38.0</td>
          <td>67.0</td>
          <td>10.5</td>
          <td>13.2</td>
          <td>NaN</td>
          <td>NaN</td>
          <td>NaN</td>
          <td>NaN</td>
          <td>1016.1</td>
          <td>NaN</td>
          <td>24.5</td>
          <td>25.7</td>
          <td>NaN</td>
          <td>NaN</td>
          <td>NaN</td>
          <td>2025-01-24 19:00:00+00:00</td>
        </tr>
        <tr>
          <th>3</th>
          <td>14048</td>
          <td>-8.0</td>
          <td>65.0</td>
          <td>NaN</td>
          <td>NaN</td>
          <td>NaN</td>
          <td>NaN</td>
          <td>NaN</td>
          <td>NaN</td>
          <td>NaN</td>
          <td>NaN</td>
          <td>NaN</td>
          <td>NaN</td>
          <td>29.0</td>
          <td>NaN</td>
          <td>NaN</td>
          <td>NaN</td>
          <td>2025-01-24 19:00:00+00:00</td>
        </tr>
        <tr>
          <th>4</th>
          <td>14049</td>
          <td>-12.0</td>
          <td>65.0</td>
          <td>120.0</td>
          <td>5.3</td>
          <td>6.3</td>
          <td>NaN</td>
          <td>NaN</td>
          <td>NaN</td>
          <td>NaN</td>
          <td>1009.0</td>
          <td>NaN</td>
          <td>28.3</td>
          <td>NaN</td>
          <td>NaN</td>
          <td>NaN</td>
          <td>NaN</td>
          <td>2025-01-24 19:00:00+00:00</td>
        </tr>
      </tbody>
    </table>
    </div>
    </div>
    <br />
    <br />

.. GENERATED FROM PYTHON SOURCE LINES 24-25

In this case I'm going to drop buoys that do not have water temperature measurements.

.. GENERATED FROM PYTHON SOURCE LINES 25-27

.. code-block:: Python

    df.dropna(subset=['water_temperature'], inplace=True)








.. GENERATED FROM PYTHON SOURCE LINES 28-29

Let's make a simple plot of the buoy positions and color by water temperature

.. GENERATED FROM PYTHON SOURCE LINES 29-43

.. code-block:: Python

    proj = ccrs.LambertConformal(central_latitude=45., central_longitude=-100.,
                                 standard_parallels=[30, 60])

    fig = plt.figure(figsize=(17., 11.))
    ax = plt.axes(projection=proj)
    ax.coastlines('50m', edgecolor='black')
    ax.add_feature(cfeature.OCEAN.with_scale('50m'))
    ax.add_feature(cfeature.LAND.with_scale('50m'))
    ax.set_extent([-85, -75, 25, 30], ccrs.PlateCarree())

    ax.scatter(df['longitude'], df['latitude'], c=df['water_temperature'],
               transform=ccrs.PlateCarree())

    plt.show()



.. image-sg:: /examples/ndbc/images/sphx_glr_latest_request_001.png
   :alt: latest request
   :srcset: /examples/ndbc/images/sphx_glr_latest_request_001.png
   :class: sphx-glr-single-img






.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 5.778 seconds)


.. _sphx_glr_download_examples_ndbc_latest_request.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: latest_request.ipynb <latest_request.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: latest_request.py <latest_request.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: latest_request.zip <latest_request.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
